<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/schedule"
        android:icon="@drawable/schedule"
        android:title="@string/title_schedule" />

    <item
        android:id="@+id/comment"
        android:icon="@drawable/comment_icon"
        android:title="@string/title_addComment" />

    <item
        android:id="@+id/scout"
        android:icon="@drawable/scout_nav_icon"
        android:title="@string/title_scout" />

    <item
        android:id="@+id/photo"
        android:icon="@drawable/photo_icon"
        android:title="@string/title_takePhoto" />

    <item
        android:id="@+id/team_lookup"
        android:icon="@drawable/lookup_icon"
        android:title="@string/title_lookup" />
</menu>
